--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     placeholder="170"
                     name="altura"
                     class="border border-gray-400 py-1 px-2 rounded-lg w-full"
-                  />
+                    required/>
                 </div>
               </div>
 
@@ -62,7 +62,7 @@
                     placeholder="Kg's"
                     name="kg"
                     class="border border-gray-400 py-1 px-2 rounded-lg w-full"
-                  />
+                    required/>
                 </div>
                 <div class=" flex flex-col w-1/2">
                   <label for="select-form">Seu Objetivo</label>
@@ -101,7 +101,7 @@
                   placeholder="seu@email.com"
                   name="wpp"
                   class="border border-gray-400 py-1 px-2 w-full rounded-lg"
-                />
+                  required/>
               </div>
               <div class="mt-5">
                 <input
@@ -109,7 +109,7 @@
                   type="checkbox"
                   name="termo"
                   class="border border-gray-400"
-                />
+                  required/>
                 <span
                   >Eu li e aceito os
                   <a class="text-purple-500" href="#">Termos de Uso </a> &
