--- a/index.html
+++ b/index.html
@@ -18,22 +18,19 @@
           class="p-5 flex flex-col lg:flex-row w-full bg-neutral-100 rounded-xl mx-auto shadow-lg overflow-hidden"
         >
           <div
-            class="py-5 lg:w-1/2 object-fill w-full flex flex-col items-center justify-center bg-no-repeat"
+            class="lg:py-5 lg:w-1/2 object-fill w-full flex flex-col items-center justify-center bg-no-repeat"
           >
-            <h1 class="text-zinc-900 text-5xl mb-5 mt-5 flex lg:text-3xl ">
+            <h1 class="text-zinc-900 text-5xl lg:mb-5 lg:mt-5 flex lg:text-6xl ">
               PlanoFit<img src="src/imgs/PlanoFit Logo.png" class="px-5" />
             </h1>
             <img src="src/imgs/planofit.svg" alt="" class="hidden lg:flex" />
           </div>
 
-          <div class="w-full lg:w-1/2 py-10 px-12">
-            <h1 class="text-3xl mb-4 text-center">Informe seus dados</h1>
-            <p class="mb-4 text-center">
-              Informe seus dados para criarmos seu plano personalizado
-              
-            </p>
+          <div class="w-full lg:w-1/2 lg:py-10 lg:px-12">
+            <h1 class=" text-1xl lg:text-3xl lg:mb-4 ">Informe seus dados para criarmos seu plano de dieta e treino :
+            </h1>
             <form action="" id="form" class="">
-              <div class="mt-5 flex gap-3">
+              <div class=" lg:mt-5 flex gap-3">
                 <div class="mt-5 flex flex-col w-1/2">
                   <label for="nome">Idade</label>
                   <input
