feat: Add validation form function

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                       <option selected disabled value="">Selecione seu objetivo</option>
                       <option value="emagrecimento" class="bg-nutri-yellow/10">Emagrecimento</option>
                       <option value="saude" class="bg-nutri-yellow/10">Saúde</option>
-                      <option value="muscular" class="bg-nutri-yellow/10">Ganho de Massa Muscular</option>
+                      <option value="Ganho de Massa Muscular" class="bg-nutri-yellow/10">Ganho de Massa Muscular</option>
                     </select>
                     <div class="absolute inset-y-0 right-0 flex items-center pr-3 pointer-events-none">
                       <svg class="w-5 h-5 text-nutri-yellow" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -128,19 +128,6 @@
                   </div>
                 </div>
               </div>
-
-              <div class="space-y-2 group">
-                <label for="email" class="block text-sm font-medium text-nutri-gray group-hover:text-nutri-yellow transition-colors duration-300">E-mail</label>
-                <input
-                  id="email"
-                  type="email"
-                  placeholder="seu@email.com"
-                  name="wpp"
-                  class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-nutri-yellow focus:border-transparent transition-all duration-300 hover:border-nutri-yellow"
-                  required
-                />
-              </div>
-
               <div class="flex items-center space-x-2 group">
                 <input
                   type="checkbox"
