Add: animations and loading on criar plano button

--- a/index.html
+++ b/index.html
@@ -163,27 +163,10 @@
                       d="M13 10V3L4 14h7v7l9-11h-7z"
                     />
                   </svg>
-                  <svg
-                    id="svgBtn"
-                    class="hidden w-6 h-6 animate-spin"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <circle
-                      class="opacity-25"
-                      cx="12"
-                      cy="12"
-                      r="10"
-                      stroke="currentColor"
-                      stroke-width="4"
-                    ></circle>
-                    <path
-                      class="opacity-75"
-                      fill="currentColor"
-                      d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
-                    ></path>
-                  </svg>
+                </div>
+                <div id="loadingMessage" class="absolute inset-0 flex items-center justify-center text-nutri-black font-medium">
+                  <span></span>
+                  <img id="cookingIcon" src="./src/imgs/nutricao.png" class="hidden w-8 h-8 animate-cooking" alt="Ícone de nutrição" />
                 </div>
               </button>
             </form>
