feat:Insert GoogleAds script

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta name="author" content="PlanoFit" />
     <meta name="robots" content="index, follow" />
     
-    <!-- Estrutura de dados Schema.org -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -30,26 +29,24 @@
       ]
     }
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6949020295998340"
+     crossorigin="anonymous"></script>
     
-    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://planofit.com.br/" />
     <meta property="og:title" content="PlanoFit - Crie Seu Plano Alimentar Personalizado Grátis" />
     <meta property="og:description" content="Gere gratuitamente seu plano alimentar personalizado. Receba em PDF um plano completo adaptado ao seu objetivo: emagrecimento, ganho de massa ou saúde." />
     <meta property="og:image" content="https://planofit.com.br/src/imgs/PlanoFit Logo.png" />
 
-    <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://planofit.com.br/" />
     <meta property="twitter:title" content="PlanoFit - Crie Seu Plano Alimentar Personalizado Grátis" />
     <meta property="twitter:description" content="Gere gratuitamente seu plano alimentar personalizado. Receba em PDF um plano completo adaptado ao seu objetivo: emagrecimento, ganho de massa ou saúde." />
     <meta property="twitter:image" content="https://planofit.com.br/src/imgs/PlanoFit Logo.png" />
 
-    <!-- Favicon -->
     <link rel="icon" type="image/png" href="src/imgs/PlanoFit Logo.png" />
     <link rel="apple-touch-icon" href="src/imgs/PlanoFit Logo.png" />
 
-    <!-- Canonical URL -->
     <link rel="canonical" href="https://planofit.com.br/" />
 
     <link rel="stylesheet" href="style.css" />
