Add: configurations for adsense

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="plano alimentar personalizado, plano alimentar online, plano alimentar grátis, plano alimentar pdf, dieta personalizada, alimentação saudável, emagrecimento, ganho de massa" />
     <meta name="author" content="PlanoFit" />
     <meta name="robots" content="index, follow" />
+    <meta name="google-adsense-account" content="ca-pub-6949020295998340">
     
     <script type="application/ld+json">
     {
